--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -73,7 +73,7 @@ body {
   display: flex;
   flex-direction: column;
   margin-left: 370px;
-  padding: 1rem;
+  padding: 0 1rem;
 }
 
 .main-content-collapse {
@@ -395,18 +395,18 @@ body {
             flex-direction: column;
             color: #000;
             margin: 0 1rem;
+            transition: all 0.01s;
 
             i {
               font-size: 2rem;
               margin-bottom: 5px;
-
-              &:hover {
-                color: var(--main-color);
-              }
             }
             span {
               font-size: 1rem;
               opacity: 0.5;
+            }
+            &:hover {
+              color: var(--main-color);
             }
           }
         }
@@ -418,7 +418,11 @@ body {
         background: transparent;
         font-size: 2rem;
         margin: 0 2rem;
+        transition: all 0.01s;
         cursor: pointer;
+        &:hover {
+          color: var(--main-color);
+        }
       }
     }
   }
