--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -14,13 +14,11 @@
   padding: 0;
   outline: 0;
   border: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   list-style: none;
   text-decoration: none;
   scroll-behavior: smooth;
   font-family: "Poppins", sans-serif;
-  -webkit-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
 }
 
@@ -33,11 +31,8 @@ body {
 }
 
 .row {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   margin-left: -15px;
   margin-right: -15px;
   padding-top: 1rem;
@@ -73,13 +68,8 @@ body {
 }
 
 .main-content {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   margin-left: 370px;
   padding: 0 1rem;
 }
@@ -93,24 +83,16 @@ body {
   padding: 1rem;
   width: 100%;
   height: 70px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-between;
+  align-items: center;
 }
-
 .navbar button {
   outline: 0;
   background: transparent;
   border: 0;
   cursor: pointer;
 }
-
 .navbar button i {
   font-size: 1.5rem;
 }
@@ -122,7 +104,6 @@ body {
   left: -9999px;
   height: calc(100% - 70px);
 }
-
 .sidebar .sidebar-container {
   width: 100%;
   padding-left: 15px;
@@ -130,94 +111,54 @@ body {
   margin-right: auto;
   margin-left: auto;
 }
-
 .sidebar .sidebar-container .row {
   padding: 0;
 }
-
 .sidebar .sidebar-top {
   background: var(--main-color);
   width: 100%;
   max-height: 300px;
   padding: 1rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
-
 .sidebar .sidebar-top .sidebar-flex {
   padding: 1rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
 }
-
 .sidebar .sidebar-top button {
   display: none;
 }
-
 .sidebar .sidebar-photo {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: flex-start;
+  align-items: center;
 }
-
 .sidebar .sidebar-photo img {
   width: 80px;
   height: 80px;
   border-radius: 50%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
-
 .sidebar .sidebar-info {
   margin-left: 1rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
-
 .sidebar .sidebar-info p {
   font-size: 1.2rem;
   font-weight: 600;
   color: #fff;
 }
-
 .sidebar .sidebar-button {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   padding-bottom: 1rem;
 }
-
 .sidebar .sidebar-button a {
   margin-top: 10px;
   background: transparent;
@@ -229,42 +170,32 @@ body {
   padding: 0.5rem 2rem;
   cursor: pointer;
 }
-
 .sidebar .sidebar-item {
   margin-top: 2rem;
 }
-
 .sidebar .sidebar-item ul {
   padding-left: 1rem;
 }
-
 .sidebar .sidebar-item ul li {
   margin-top: 2rem;
   padding: 0.4rem;
-  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
-
 .sidebar .sidebar-item ul li:hover {
   background: #eeeeee;
 }
-
 .sidebar .sidebar-item ul li a {
   display: block;
   color: var(--main-text-color);
   font-size: 1.2rem;
   font-weight: 500;
   text-decoration: none;
-  -webkit-transition: 0.1s;
   transition: 0.1s;
 }
-
 .sidebar .sidebar-item ul li a:hover {
   color: rgba(0, 0, 0, 0.719);
 }
-
 .sidebar .sidebar-item ul li a i {
-  -webkit-transition: 0.1s;
   transition: 0.1s;
   margin-right: 1rem;
 }
@@ -276,119 +207,69 @@ body {
 .wallet {
   width: 98%;
 }
-
 .wallet .wallet-container {
   height: 300px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   width: 100%;
   padding: 2rem;
   background: var(--second-color);
   border-radius: 1rem;
-  -webkit-box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.15);
-          box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
 }
-
 .wallet .wallet-container .wallet-header {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
   width: 100%;
 }
-
 .wallet .wallet-container .wallet-header p {
   color: var(--main-text-color);
   font-weight: 500;
 }
-
 .wallet .wallet-container .wallet-center {
   padding-top: 1rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-
 .wallet .wallet-container .wallet-center p {
   font-size: 1rem;
 }
-
 .wallet .wallet-container .wallet-center h1 {
   font-weight: 500;
 }
-
 .wallet .wallet-container .wallet-center span {
   font-size: 1.2rem;
 }
-
 .wallet .wallet-container .wallet-footer {
   padding-top: 2rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
-
 .wallet .wallet-container .wallet-footer .wallet-footer-item {
   margin-right: 1rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
-
 .wallet .wallet-container .wallet-footer .wallet-footer-item p {
   font-size: 1rem;
   font-weight: 500;
 }
-
 .wallet .wallet-container .wallet-footer .wallet-footer-item i {
   font-size: 1rem;
   color: #fff;
   border-radius: 50%;
   width: 40px;
   height: 40px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   background: var(--main-color);
   margin-bottom: 1rem;
 }
-
 .wallet .wallet-container .wallet-footer .wallet-footer-item span {
   color: #000;
 }
@@ -398,118 +279,73 @@ body {
   height: 139px;
   border-radius: 1rem;
   background: white;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
   padding: 0 1rem;
 }
-
 .make-payments .payments-content .payments-title {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   opacity: 0.6;
-  min-width: -webkit-max-content;
-  min-width: -moz-max-content;
   min-width: max-content;
 }
-
 .make-payments .payments-content .payments-title p {
   text-transform: uppercase;
   font-weight: 600;
   font-size: 1.2rem;
   margin-right: 2px;
 }
-
 .make-payments .payments-content .payments-title i {
-  -webkit-transform: rotate(10deg);
-          transform: rotate(10deg);
+  transform: rotate(10deg);
   font-size: 0.9rem;
   color: var(--main-color);
 }
-
 .make-payments .payments-content .payments-slider {
   width: -webkit-fill-available;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
-
 .make-payments .payments-content .payments-slider .pay-carousel {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   width: 100%;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  flex-direction: row;
 }
-
 .make-payments .payments-content .payments-slider .pay-carousel .payments-slider-content {
   overflow: hidden;
   position: relative;
   width: 100%;
   margin: 0 10px;
 }
-
 .make-payments .payments-content .payments-slider .pay-carousel .payments-slider-content a {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  align-items: center;
+  flex-direction: column;
   color: #000;
   margin: 0 1rem;
-  -webkit-transition: all 0.01s;
   transition: all 0.01s;
 }
-
 .make-payments .payments-content .payments-slider .pay-carousel .payments-slider-content a i {
   font-size: 2rem;
   margin-bottom: 5px;
 }
-
 .make-payments .payments-content .payments-slider .pay-carousel .payments-slider-content a span {
   font-size: 1rem;
   opacity: 0.5;
 }
-
 .make-payments .payments-content .payments-slider .pay-carousel .payments-slider-content a:hover {
   color: var(--main-color);
 }
-
 .make-payments .payments-content .payments-slider .payments-nav-btn {
   outline: none;
   border: none;
   background: transparent;
   font-size: 2rem;
   margin: 0 2rem;
-  -webkit-transition: all 0.01s;
   transition: all 0.01s;
   cursor: pointer;
 }
-
 .make-payments .payments-content .payments-slider .payments-nav-btn:hover {
   color: var(--main-color);
 }
@@ -518,63 +354,40 @@ body {
   padding: 1rem;
   background: #f8f8f8;
   border-radius: 0.2rem;
-  -webkit-box-shadow: inset 20px 20px 20px rgba(0, 0, 0, 0.089);
-          box-shadow: inset 20px 20px 20px rgba(0, 0, 0, 0.089);
+  box-shadow: inset 20px 20px 20px rgba(0, 0, 0, 0.089);
 }
-
 .transactions .trans {
   margin-top: 1rem;
   width: 100%;
   height: var(--trans-height);
   border-radius: 1rem;
   background: white;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
-
 .transactions .trans .img-txt {
   pointer-events: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
-
 .transactions .trans .img-txt p {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   margin-left: 1rem;
   font-size: 1.5rem;
 }
-
 .transactions .trans .img-txt img {
   width: 100%;
   height: var(--trans-height);
-  -o-object-fit: cover;
-     object-fit: cover;
-  -o-object-position: center;
-     object-position: center;
+  object-fit: cover;
+  object-position: center;
   border-bottom-left-radius: 1rem;
   border-top-left-radius: 1rem;
 }
-
 .transactions .trans .content {
   margin-right: 2rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
-
 .transactions .trans .content p {
   pointer-events: none;
   font-size: 1.1rem;
@@ -582,7 +395,6 @@ body {
   margin-left: 3rem;
   margin-right: 3rem;
 }
-
 .transactions .trans .content .status {
   color: #fff;
   font-size: 1rem;
@@ -590,24 +402,19 @@ body {
   padding: 0.2rem 0.8rem;
   border-radius: 1rem;
 }
-
 .transactions .trans .content .processed {
   background: var(--main-color);
 }
-
 .transactions .trans .content .processed:hover {
   background: var(--main-color-alt);
 }
-
 .transactions .trans .content .onhold {
   background: var(--onhold-color);
 }
-
 .transactions .trans .content .onhold:hover {
   background: var(--onhold-color-alt);
 }
-
-.transactions .trans .content input[type="checkbox"] {
+.transactions .trans .content input[type=checkbox] {
   width: 1rem;
   height: 1rem;
   margin-right: 1rem;
@@ -626,13 +433,16 @@ hr {
   .mobile-hide {
     display: none;
   }
+
   .main-content,
-  .main-content-collapse {
+.main-content-collapse {
     margin: 0;
   }
+
   .col-50 {
     max-width: 100%;
   }
+
   .sidebar {
     z-index: 50;
     top: 0;
@@ -654,15 +464,14 @@ hr {
     font-size: 1.5rem;
     color: #636363;
   }
+
   .make-payments .payments-content {
     height: auto;
     display: block;
     padding: 1rem;
   }
   .make-payments .payments-content .payments-title {
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    justify-content: space-between;
     margin: 1rem 0;
     opacity: 1;
   }
@@ -675,13 +484,14 @@ hr {
   }
   .make-payments .payments-content .payments-title .mobile-nav button i {
     font-size: 2rem;
-    -webkit-transform: none;
-            transform: none;
+    transform: none;
     color: #000;
   }
+
   .loan .loan-container .loan-center a {
     font-size: 0.8rem;
   }
+
   .transactions .trans .img-txt p {
     font-size: 1.2rem;
   }
@@ -689,28 +499,31 @@ hr {
     width: 50%;
   }
   .transactions .trans .content p,
-  .transactions .trans .content input {
+.transactions .trans .content input {
     display: none;
   }
+
   body,
-  html,
-  #root,
-  .wrapper {
+html,
+#root,
+.wrapper {
     height: auto;
   }
 }
-
 @media only screen and (min-width: 600px) {
   .mobile-hide {
     display: none;
   }
+
   .main-content,
-  .main-content-collapse {
+.main-content-collapse {
     margin: 0;
   }
+
   .col-50 {
     max-width: 100%;
   }
+
   .sidebar {
     z-index: 50;
     top: 0;
@@ -732,15 +545,14 @@ hr {
     font-size: 1.5rem;
     color: #636363;
   }
+
   .make-payments .payments-content {
     height: auto;
     display: block;
     padding: 1rem;
   }
   .make-payments .payments-content .payments-title {
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    justify-content: space-between;
     margin: 1rem 0;
     opacity: 1;
   }
@@ -753,15 +565,16 @@ hr {
   }
   .make-payments .payments-content .payments-title .mobile-nav button i {
     font-size: 2rem;
-    -webkit-transform: none;
-            transform: none;
+    transform: none;
     color: #000;
   }
+
   .loan .loan-container .loan-center a {
     font-size: 0.8rem;
   }
+
   .transactions .trans .content p,
-  .transactions .trans .content input {
+.transactions .trans .content input {
     display: none;
     margin: 0;
   }
@@ -770,17 +583,17 @@ hr {
     display: block;
     font-size: 1rem;
   }
+
   body,
-  html,
-  #root,
-  .wrapper {
+html,
+#root,
+.wrapper {
     height: auto;
   }
 }
-
 @media only screen and (min-width: 992px) {
   .transactions .trans .content p,
-  .transactions .trans .content input {
+.transactions .trans .content input {
     display: block;
     margin: 0 1rem;
     font-size: 0.9rem;
@@ -791,20 +604,23 @@ hr {
     font-size: 0.8rem;
   }
 }
-
 @media only screen and (min-width: 1200px) {
   .mobile-hide {
     display: block;
   }
+
   .main-content {
     margin-left: 370px;
   }
+
   .main-content-collapse {
     margin-left: 0;
   }
+
   .col-50 {
     max-width: 50%;
   }
+
   .sidebar {
     z-index: 50;
     bottom: auto;
@@ -814,20 +630,17 @@ hr {
   .sidebar .sidebar-top button {
     display: none;
   }
+
   .make-payments hr {
     display: none;
   }
   .make-payments .payments-content {
     height: auto;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     padding: 1rem;
   }
   .make-payments .payments-content .payments-title {
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    justify-content: space-between;
     margin: 1rem 0;
     opacity: 1;
   }
@@ -837,9 +650,11 @@ hr {
   .make-payments .payments-content .payments-title .mobile-nav {
     display: none;
   }
+
   .loan .loan-container .loan-center a {
     font-size: 1rem;
   }
+
   .transactions .trans .img-txt p {
     font-size: 1.2rem;
   }
@@ -847,7 +662,7 @@ hr {
     width: 50%;
   }
   .transactions .trans .content p,
-  .transactions .trans .content input {
+.transactions .trans .content input {
     display: block;
     margin: 0 1.6rem;
     font-size: 1.1rem;
@@ -857,11 +672,13 @@ hr {
     display: block;
     font-size: 0.8rem;
   }
+
   body,
-  html,
-  #root,
-  .wrapper {
+html,
+#root,
+.wrapper {
     height: 100%;
   }
 }
+
 /*# sourceMappingURL=style.css.map */
