--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -231,7 +231,7 @@ body {
     padding: 2rem;
     background: var(--second-color);
     border-radius: 1rem;
-    box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
 
     .wallet-header {
       display: flex;
